--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="es-VE">
 <head>
   <meta charset="utf-8">
-  <title>Pruebas</title>
+  <title>Certainet Tecnologia</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/images/logo.png">
 </head>
 <body>
   <app-root></app-root>
 </body>
 </html>
+
